# docs/swagger.json
@@ -27,7 +27,7 @@
                 }
             }
         },
-        "/syllabus/faculties": {
+        "/syllabus/faculties/{code}": {
             "get": {
                 "description": "パラメータ引数に与えた学部コードに一致するシラバスを返します．",
                 "consumes": [
@@ -45,7 +45,7 @@
                         "type": "string",
                         "description": "faculty code",
                         "name": "code",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
